Fix findbugs error.
svn path=/trunk/; revision=45808


Former-commit-id: 3746d00597768ed52076b963ab5a8a0f257c0f6b